--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -2,6 +2,14 @@
 
 $base__space-unit: 1.5rem;
 
+// Logo
+$logo__background-width: 50px;
+$logo__background-height: 33px;
+$logo__background-url: '../../assets/images/logos/inhabitent-logo-tent.svg';
+
+// Navigation
+
+
 // Colors
 
 $color__background-body: #fff;
