--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -9,6 +9,8 @@ $logo__background-url: '../../assets/images/logos/inhabitent-logo-tent.svg';
 
 // Navigation
 
+// Content
+$content__size-width: 1120px;
 
 // Colors
 
