--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -4,12 +4,14 @@
 
 /* General */
 .container {
-	width: 100%;
+	width: $content__size-width;
+	margin: 0 auto;
 
 	// Flex container
 	&-flex {
 		@extend .container;
 			display: flex;
+			justify-content: space-between;
 
 		// row and no wrap
 		&--row-nowrap {
@@ -20,6 +22,11 @@
 }
 
 /* Posts and pages */
+
+.site-content {
+	width: $content__size-width;
+	margin: 0 auto;
+}
 
 .sticky {
 	display: block;
