--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -8,6 +8,7 @@ $logo__background-height: 33px;
 $logo__background-url: '../../assets/images/logos/inhabitent-logo-tent.svg';
 
 // Navigation
+$nav__link-top-bottom--spacing: 0.5rem;
 
 // Content
 $content__size-width: 1120px;
@@ -20,19 +21,21 @@ $color__text-main: #404040;
 $color__background-screen: #f1f1f1;
 $color__text-screen: #21759b;
 
-$color__background-hr: #ccc;
+$color__background-hr: #e1e1e1;
 $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 $color__border-abbr: #666;
 
-$color__link: royalblue;
-$color__link-visited: purple;
-$color__link-hover: midnightblue;
+$color__link: #248A83;
+$color__link-visited: #248A83;
+$color__link-hover: #2f1339;
+
 
 // Typography
 
-$font__main: sans-serif;
+$font__main: 'Merriweather';
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
+$font__text-size-base: 16px;
