--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -40,6 +40,37 @@
 		font-family: 'Novecento';
 	}
 }
+.entry-header {
+	position: relative;
+
+	img {
+		width: 100%;
+	}
+
+	.entry-title, .entry-meta {
+		position: absolute;
+	}
+
+	.entry-title {
+		top: 0;
+		left: 0;
+		background-color: $color__link;
+		padding: 0.50rem 1.5rem;
+		width: 75%;
+		margin-top: 2.25rem;
+		font-size: 2.35rem;
+		line-height: $font__line-height-entry;
+
+		a {
+			text-decoration: none;
+			color: $color__background-body;
+
+			&:hover {
+				color: $color__background-ins;
+			}
+		}
+	}
+}
 
 .sticky {
 	display: block;
