--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -37,5 +37,6 @@ $font__main: 'Merriweather';
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
+$font__line-height-entry: 1.2;
 $font__line-height-pre: 1.6;
 $font__text-size-base: 16px;
