--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -49,26 +49,35 @@
 
 	.entry-title, .entry-meta {
 		position: absolute;
-	}
-
-	.entry-title {
-		top: 0;
-		left: 0;
 		background-color: $color__link;
-		padding: 0.50rem 1.5rem;
-		width: 75%;
-		margin-top: 2.25rem;
-		font-size: 2.35rem;
-		line-height: $font__line-height-entry;
+		color: $color__background-body;
+		font-family: Novecento,sans-serif;
 
 		a {
-			text-decoration: none;
 			color: $color__background-body;
+			text-decoration: none;
 
 			&:hover {
 				color: $color__background-ins;
 			}
 		}
+	}
+
+	.entry-title {
+		top: 0;
+		left: 0;
+		padding: 0.50rem 1.5rem;
+		width: 75%;
+		margin-top: 2.25rem;
+		font-size: 2.35rem;
+		line-height: $font__line-height-entry;
+	}
+
+	.entry-meta {
+		bottom: 0;
+		right: 0;
+		margin-bottom: 0.4rem;
+		padding: 0.25rem 1.5rem;
 	}
 }
 
