--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -606,8 +606,16 @@ a {
 /*--------------------------------------------------------------
 # Widgets
 --------------------------------------------------------------*/
+.widget-area {
+  padding: 3rem 0 3rem 3rem;
+  width: 27%; }
+
+.widget-title {
+  margin-top: 0;
+  margin-bottom: 2rem; }
+
 .widget {
-  margin: 0 0 1.5rem;
+  margin: 0 0 3rem;
   /* Make sure select elements fit in widgets. */ }
   .widget select {
     max-width: 100%; }
@@ -658,21 +666,28 @@ a {
   .entry-header img {
     width: 100%; }
   .entry-header .entry-title, .entry-header .entry-meta {
-    position: absolute; }
+    position: absolute;
+    background-color: #248A83;
+    color: #fff;
+    font-family: Novecento,sans-serif; }
+    .entry-header .entry-title a, .entry-header .entry-meta a {
+      color: #fff;
+      text-decoration: none; }
+      .entry-header .entry-title a:hover, .entry-header .entry-meta a:hover {
+        color: #fff9c0; }
   .entry-header .entry-title {
     top: 0;
     left: 0;
-    background-color: #248A83;
     padding: 0.50rem 1.5rem;
     width: 75%;
     margin-top: 2.25rem;
     font-size: 2.35rem;
     line-height: 1.2; }
-    .entry-header .entry-title a {
-      text-decoration: none;
-      color: #fff; }
-      .entry-header .entry-title a:hover {
-        color: #fff9c0; }
+  .entry-header .entry-meta {
+    bottom: 0;
+    right: 0;
+    margin-bottom: 0.4rem;
+    padding: 0.25rem 1.5rem; }
 
 .sticky {
   display: block; }
