--- a/themes/inhabitent/sass/_widgets.scss
+++ b/themes/inhabitent/sass/_widgets.scss
@@ -8,9 +8,14 @@
 
 .widget-title {
 	margin-top: 0;
-	margin-bottom: 2rem;
+	margin-bottom: $base__space-unit;
 }
 
+h2.widget-title {
+	font-family: 'Novecento';
+	letter-spacing: 2px;
+	text-transform: uppercase;
+}
 
 .widget {
 	margin: 0 0 ($base__space-unit * 2);
@@ -26,11 +31,35 @@
 		padding: 0;
 
 		li a {
-			text-decoration: none;
-			text-transform: none;
+			@extend .link-reset;
 		}
 	}
+}
 
+.business-hours {
+	span.font-bold {
+		font-weight: bold;
+	}
+}
+
+.sidebar-container {
+	display: flex;
+}
+
+.sidebar-contact {
+	margin-bottom: $base__space-unit / 1.2;
+	i {
+		width: 20px;
+		margin-right: 0.5rem;
+	}
+
+	span {
+		position: relative;
+	}
+
+	a {
+		@extend .link-reset;
+	}
 }
 
 /* Search widget. */
