--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -316,6 +316,10 @@ mark, ins {
 big {
   font-size: 125%; }
 
+.link-reset, .widget.widget_archive ul li a, .sidebar-contact a {
+  text-transform: none;
+  text-decoration: none; }
+
 /*--------------------------------------------------------------
 # Elements
 --------------------------------------------------------------*/
@@ -612,7 +616,12 @@ a {
 
 .widget-title {
   margin-top: 0;
-  margin-bottom: 2rem; }
+  margin-bottom: 1.5rem; }
+
+h2.widget-title {
+  font-family: 'Novecento';
+  letter-spacing: 2px;
+  text-transform: uppercase; }
 
 .widget {
   margin: 0 0 3rem;
@@ -623,9 +632,21 @@ a {
     list-style: none;
     margin: 0;
     padding: 0; }
-    .widget.widget_archive ul li a {
-      text-decoration: none;
-      text-transform: none; }
+
+.business-hours span.font-bold {
+  font-weight: bold; }
+
+.sidebar-container {
+  display: -ms-flexbox;
+  display: flex; }
+
+.sidebar-contact {
+  margin-bottom: 1.25rem; }
+  .sidebar-contact i {
+    width: 20px;
+    margin-right: 0.5rem; }
+  .sidebar-contact span {
+    position: relative; }
 
 /* Search widget. */
 .widget_search .search-submit {
@@ -658,8 +679,6 @@ a {
   width: 1120px;
   margin: 0 auto;
   padding-top: 3.5rem; }
-  .site-content h2 {
-    font-family: 'Novecento'; }
 
 .entry-header {
   position: relative; }
