--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -34,6 +34,7 @@ $color__link-hover: #2f1339;
 // Typography
 
 $font__main: 'Merriweather';
+$font__entry-button: 'Novecento';
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
