--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -316,7 +316,7 @@ mark, ins {
 big {
   font-size: 125%; }
 
-.link-reset, .widget.widget_archive ul li a, .sidebar-contact a {
+.link-reset, .widget.widget_archive ul li a, .sidebar-contact a, .entry-readmore a {
   text-transform: none;
   text-decoration: none; }
 
@@ -708,11 +708,28 @@ h2.widget-title {
     margin-bottom: 0.4rem;
     padding: 0.25rem 1.5rem; }
 
+.entry-content p {
+  line-height: 1.75;
+  font-family: "Merriweather"; }
+
+.entry-readmore a {
+  color: #000;
+  background: #fff;
+  border: 1px solid #000;
+  padding: 0.75rem 1.5rem;
+  text-transform: uppercase;
+  font-family: "Novecento";
+  font-size: 0.9rem;
+  line-height: 1; }
+  .entry-readmore a:hover {
+    background: #248A83;
+    color: #fff; }
+
 .sticky {
   display: block; }
 
 .hentry {
-  margin: 0 0 1.5rem; }
+  margin: 0 0 4.5rem; }
 
 .updated:not(.published) {
   display: none; }
