--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -316,7 +316,7 @@ mark, ins {
 big {
   font-size: 125%; }
 
-.link-reset, .widget.widget_archive ul li a, .sidebar-contact a, .entry-readmore a {
+.link-reset, .widget.widget_archive ul li a, .sidebar-contact a, .site-footer .footer-contact a, .entry-readmore a {
   text-transform: none;
   text-decoration: none; }
 
@@ -640,12 +640,12 @@ h2.widget-title {
   display: -ms-flexbox;
   display: flex; }
 
-.sidebar-contact {
+.sidebar-contact, .site-footer .footer-contact {
   margin-bottom: 1.25rem; }
-  .sidebar-contact i {
+  .sidebar-contact i, .site-footer .footer-contact i {
     width: 20px;
     margin-right: 0.5rem; }
-  .sidebar-contact span {
+  .sidebar-contact span, .site-footer .footer-contact span {
     position: relative; }
 
 /* Search widget. */
@@ -823,3 +823,53 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
+/*--------------------------------------------------------------
+# Footer Styles
+--------------------------------------------------------------*/
+.site-footer {
+  background: url("../../assets/images/dark-wood.png");
+  color: white; }
+  .site-footer .footer__contact,
+  .site-footer .footer__business-hours,
+  .site-footer .footer__logo {
+    margin: 1.5rem 0; }
+  .site-footer a {
+    color: white; }
+    .site-footer a:hover {
+      text-decoration: underline; }
+  .site-footer h3 {
+    margin-top: 1.5rem;
+    text-transform: uppercase;
+    font-family: 'Novecento';
+    font-size: 1.2rem;
+    color: #d99054;
+    letter-spacing: 2px; }
+  .site-footer .site-info {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 1120px;
+    margin: 0 auto; }
+    .site-footer .site-info .footer__contact {
+      width: 25%; }
+    .site-footer .site-info .footer__business-hours {
+      width: 25%; }
+    .site-footer .site-info .footer__logo {
+      width: 50%; }
+      .site-footer .site-info .footer__logo .footer__logo-container {
+        margin-top: 1rem;
+        text-align: right; }
+        .site-footer .site-info .footer__logo .footer__logo-container img {
+          width: 50%; }
+  .site-footer .footer__copyright {
+    width: 100vw;
+    padding: 1.5rem 0;
+    font-family: 'Novecento'; }
+    .site-footer .footer__copyright .container, .site-footer .footer__copyright .container-flex, .site-footer .footer__copyright .container-flex--row-nowrap, .site-footer .footer__copyright .site-content {
+      text-align: center; }
+      .site-footer .footer__copyright .container p, .site-footer .footer__copyright .container-flex p, .site-footer .footer__copyright .container-flex--row-nowrap p, .site-footer .footer__copyright .site-content p {
+        margin: 0; }
+  .site-footer .footer-container {
+    display: -ms-flexbox;
+    display: flex; }
