--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -30,6 +30,8 @@ $color__link: #248A83;
 $color__link-visited: #248A83;
 $color__link-hover: #2f1339;
 
+$color__footer-h3: #d99054;
+
 
 // Typography
 
@@ -41,3 +43,4 @@ $font__line-height-body: 1.5;
 $font__line-height-entry: 1.2;
 $font__line-height-pre: 1.6;
 $font__text-size-base: 16px;
+$font__footer-h3--letter-spacing: 2px;
