made header logo clickable to go back to front page.

--- a/themes/inhabitent/sass/_header.scss
+++ b/themes/inhabitent/sass/_header.scss
@@ -21,8 +21,8 @@
 
 .inhabitent-site-logo {
     position: relative;
-    background: url($logo__background-url) no-repeat;
-    background-size: $logo__background-width $logo__background-height;
+    // background: url($logo__background-url) no-repeat;
+    // background-size: $logo__background-width $logo__background-height;
     width: $logo__background-width;
     height: $logo__background-height;
     transform: translate(-50%, -50%);
