--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -483,7 +483,6 @@ a {
 .main-navigation {
   clear: both;
   display: block;
-  float: left;
   width: 100%; }
   .main-navigation ul {
     display: none;
@@ -492,7 +491,6 @@ a {
     padding-left: 0; }
     .main-navigation ul ul {
       box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-      float: left;
       position: absolute;
       top: 1.5rem;
       left: -999rem;
@@ -678,33 +676,44 @@ h2.widget-title {
   margin: 0 auto;
   padding-top: 3.5rem; }
 
-.entry-header {
+main.site-home .entry-header {
   position: relative; }
-  .entry-header img {
-    width: 100%; }
-  .entry-header .entry-title, .entry-header .entry-meta {
+  main.site-home .entry-header .entry-title, main.site-home .entry-header .entry-meta {
     position: absolute;
     background-color: #248A83;
     color: #fff;
     font-family: Novecento,sans-serif; }
-    .entry-header .entry-title a, .entry-header .entry-meta a {
+    main.site-home .entry-header .entry-title a, main.site-home .entry-header .entry-meta a {
       color: #fff;
       text-decoration: none; }
-      .entry-header .entry-title a:hover, .entry-header .entry-meta a:hover {
+      main.site-home .entry-header .entry-title a:hover, main.site-home .entry-header .entry-meta a:hover {
         color: #fff9c0; }
-  .entry-header .entry-title {
-    top: 0;
-    left: 0;
-    padding: 0.50rem 1.5rem;
-    width: 75%;
-    margin-top: 2.25rem;
-    font-size: 2.35rem;
-    line-height: 1.2; }
-  .entry-header .entry-meta {
-    bottom: 0;
-    right: 0;
-    margin-bottom: 0.4rem;
-    padding: 0.25rem 1.5rem; }
+
+.entry-header img {
+  width: 100%; }
+
+.entry-header .entry-title, .entry-header .entry-meta {
+  font-family: Novecento,sans-serif; }
+  .entry-header .entry-title a, .entry-header .entry-meta a {
+    color: #fff;
+    text-decoration: none; }
+    .entry-header .entry-title a:hover, .entry-header .entry-meta a:hover {
+      color: #fff9c0; }
+
+.entry-header .entry-title {
+  top: 0;
+  left: 0;
+  padding: 0.50rem 1.5rem;
+  width: 75%;
+  margin-top: 2.25rem;
+  font-size: 2.35rem;
+  line-height: 1.2; }
+
+.entry-header .entry-meta {
+  bottom: 0;
+  right: 0;
+  margin-bottom: 0.4rem;
+  padding: 0.25rem 1.5rem; }
 
 .entry-content p {
   line-height: 1.75;
