--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -37,40 +37,18 @@
 	padding-top: 3.5rem;
 }
 
-main.site-home {
 
-	.entry-header {
-		position: relative;
-		
-		.entry-title, .entry-meta {
-			position: absolute;
-			background-color: $color__link;
-			color: $color__background-body;
-			font-family: Novecento,sans-serif;
-
-			a {
-				color: $color__background-body;
-				text-decoration: none;
-
-				&:hover {
-					color: $color__background-ins;
-				}
-			}
-		}
-	}
-}
-
-.entry-header {
-	// position: relative;
+body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure) .entry-header {
+	position: relative;
 
 	img {
 		width: 100%;
 	}
 
 	.entry-title, .entry-meta {
-		// position: absolute;
-		// background-color: $color__link;
-		// color: $color__background-body;
+		position: absolute;
+		background-color: $color__link;
+		color: $color__background-body;
 		font-family: Novecento,sans-serif;
 
 		a {
