--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -665,7 +665,7 @@ h2.widget-title {
           flex-flow: row nowrap; }
 
 /* ------- Content Area ------- */
-.content-area {
+body:not(.page-template-about) .content-area {
   padding: 3rem 5% 3rem 0;
   width: 73%;
   border-right: 1px solid #e1e1e1; }
@@ -676,21 +676,21 @@ h2.widget-title {
   margin: 0 auto;
   padding-top: 3.5rem; }
 
-body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure) .entry-header {
+body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure):not(.page-template-about) .entry-header {
   position: relative; }
-  body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure) .entry-header img {
+  body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure):not(.page-template-about) .entry-header img {
     width: 100%; }
-  body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure) .entry-header .entry-title, body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure) .entry-header .entry-meta {
+  body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure):not(.page-template-about) .entry-header .entry-title, body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure):not(.page-template-about) .entry-header .entry-meta {
     position: absolute;
     background-color: #248A83;
     color: #fff;
     font-family: Novecento,sans-serif; }
-    body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure) .entry-header .entry-title a, body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure) .entry-header .entry-meta a {
+    body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure):not(.page-template-about) .entry-header .entry-title a, body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure):not(.page-template-about) .entry-header .entry-meta a {
       color: #fff;
       text-decoration: none; }
-      body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure) .entry-header .entry-title a:hover, body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure) .entry-header .entry-meta a:hover {
+      body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure):not(.page-template-about) .entry-header .entry-title a:hover, body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure):not(.page-template-about) .entry-header .entry-meta a:hover {
         color: #fff9c0; }
-  body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure) .entry-header .entry-title {
+  body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure):not(.page-template-about) .entry-header .entry-title {
     top: 0;
     left: 0;
     padding: 0.50rem 1.5rem;
@@ -698,7 +698,7 @@ body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-pro
     margin-top: 2.25rem;
     font-size: 2.35rem;
     line-height: 1.2; }
-  body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure) .entry-header .entry-meta {
+  body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure):not(.page-template-about) .entry-header .entry-meta {
     bottom: 0;
     right: 0;
     margin-bottom: 0.4rem;
