--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -652,10 +652,10 @@ h2.widget-title {
 # Content
 --------------------------------------------------------------*/
 /* General */
-.container, .container-flex, .container-flex--row-nowrap, .site-content {
+.container, .container-flex, .container-flex--row-nowrap, .site-content, .product-wrapper {
   width: 1120px;
   margin: 0 auto; }
-  .container-flex, .container-flex--row-nowrap, .site-content {
+  .container-flex, .container-flex--row-nowrap, .site-content, .product-wrapper {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: justify;
@@ -665,7 +665,7 @@ h2.widget-title {
           flex-flow: row nowrap; }
 
 /* ------- Content Area ------- */
-body:not(.page-template-about) .content-area {
+body:not(.page-template-about):note(.product-template-page) .content-area {
   padding: 3rem 5% 3rem 0;
   width: 73%;
   border-right: 1px solid #e1e1e1; }
@@ -675,6 +675,12 @@ body:not(.page-template-about) .content-area {
   width: 1120px;
   margin: 0 auto;
   padding-top: 3.5rem; }
+
+.product-wrapper .product-picture {
+  width: 50%; }
+
+.product-wrapper .entry-content {
+  width: 50%; }
 
 body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure):not(.page-template-about) .entry-header {
   position: relative; }
@@ -862,9 +868,9 @@ object {
     width: 100vw;
     padding: 1.5rem 0;
     font-family: 'Novecento'; }
-    .site-footer .footer__copyright .container, .site-footer .footer__copyright .container-flex, .site-footer .footer__copyright .container-flex--row-nowrap, .site-footer .footer__copyright .site-content {
+    .site-footer .footer__copyright .container, .site-footer .footer__copyright .container-flex, .site-footer .footer__copyright .container-flex--row-nowrap, .site-footer .footer__copyright .site-content, .site-footer .footer__copyright .product-wrapper {
       text-align: center; }
-      .site-footer .footer__copyright .container p, .site-footer .footer__copyright .container-flex p, .site-footer .footer__copyright .container-flex--row-nowrap p, .site-footer .footer__copyright .site-content p {
+      .site-footer .footer__copyright .container p, .site-footer .footer__copyright .container-flex p, .site-footer .footer__copyright .container-flex--row-nowrap p, .site-footer .footer__copyright .site-content p, .site-footer .footer__copyright .product-wrapper p {
         margin: 0; }
   .site-footer .footer-container {
     display: -ms-flexbox;
