--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -316,7 +316,7 @@ mark, ins {
 big {
   font-size: 125%; }
 
-.link-reset, .widget.widget_archive ul li a, .sidebar-contact a, .site-footer .footer-contact a, .entry-readmore a {
+.link-reset, .widget.widget_archive ul li a, .sidebar-contact a, .site-footer .footer-contact a, .link-button, .entry-readmore a {
   text-transform: none;
   text-decoration: none; }
 
@@ -674,13 +674,26 @@ body:not(.page-template-about):note(.product-template-page) .content-area {
 .site-content {
   width: 1120px;
   margin: 0 auto;
-  padding-top: 3.5rem; }
+  padding-top: 4.5rem; }
 
-.product-wrapper .product-picture {
-  width: 50%; }
-
-.product-wrapper .entry-content {
-  width: 50%; }
+.product-wrapper {
+  margin-top: 3rem; }
+  .product-wrapper .product-picture {
+    width: 50%;
+    margin-right: 3rem; }
+  .product-wrapper .entry-content {
+    width: 50%;
+    margin: 0; }
+    .product-wrapper .entry-content h1, .product-wrapper .entry-content .product-price {
+      font-family: 'Novecento';
+      text-transform: uppercase; }
+    .product-wrapper .entry-content .product-price {
+      font-size: 1.8rem;
+      margin: 0.5rem 0 1.5rem 0; }
+    .product-wrapper .entry-content h1 {
+      margin: 0;
+      color: #d99054;
+      font-size: 2.4rem; }
 
 body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-product-type):not(.single-product):not(.single-adventure):not(.page-template-about) .entry-header {
   position: relative; }
@@ -713,19 +726,6 @@ body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-pro
 .entry-content p {
   line-height: 1.75;
   font-family: "Merriweather"; }
-
-.entry-readmore a {
-  color: #000;
-  background: #fff;
-  border: 1px solid #000;
-  padding: 0.75rem 1.5rem;
-  text-transform: uppercase;
-  font-family: "Novecento";
-  font-size: 0.9rem;
-  line-height: 1; }
-  .entry-readmore a:hover {
-    background: #248A83;
-    color: #fff; }
 
 .sticky {
   display: block; }
@@ -875,3 +875,23 @@ object {
   .site-footer .footer-container {
     display: -ms-flexbox;
     display: flex; }
+
+/*--------------------------------------------------------------
+# Buttons
+--------------------------------------------------------------*/
+/* ------- Button for links ------- */
+.link-button, .entry-readmore a {
+  color: #000;
+  background: #fff;
+  border: 1px solid #000;
+  padding: 0.75rem 1.5rem;
+  text-transform: uppercase;
+  font-family: "Novecento";
+  font-size: 0.9rem;
+  line-height: 1; }
+  .link-button:hover, .entry-readmore a:hover {
+    background: #248A83;
+    color: #fff; }
+  .link-button__color-green {
+    background: #248A83;
+    color: #fff; }
