fixed sidebar styles. added product archives

--- a/themes/inhabitent/sass/_forms.scss
+++ b/themes/inhabitent/sass/_forms.scss
@@ -4,7 +4,7 @@
 
 /* Buttons */
 
-button,
+button:not(input[type="social-btn"]),
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
