--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -22,13 +22,13 @@
 }
 
 /* ------- Content Area ------- */
-body:not(.page-template-about):note(.product-template-page) .content-area {
+body:not(.page-template-about):not(.product-template-default):not(.post-type-archive) .content-area {
 	padding: 3rem 5% 3rem 0;
 	width: 73%;
-	border-right: 1px solid $color__background-hr;
+	border-right: 1px solid $color__background-hr; 
 }
 
-/* Posts and pages */
+/* ------- Posts and pages ------- */
 
 .site-content {
 	@extend .container-flex;
@@ -37,6 +37,7 @@ body:not(.page-template-about):note(.product-template-page) .content-area {
 	padding-top: $base__space-unit * 3;
 }
 
+/* - Product Styles - */
 .product-wrapper {
 	@extend .container-flex;
 	margin-top: $base__space-unit * 2; 
@@ -64,6 +65,22 @@ body:not(.page-template-about):note(.product-template-page) .content-area {
 			margin: 0;
 			color: $color__footer-h1;
 			font-size: 2.4rem;
+		}
+
+		&__p-product {
+			margin-bottom: 1rem;
+		}
+	}
+
+	.product-social-buttons {
+		width: 100%;
+
+		button {
+			@extend .link-button;
+
+			i {
+				margin-right: $base__space-unit / 2;
+			}
 		}
 	}
 }
@@ -112,6 +129,7 @@ body:not(.home):not(.page-template-default):not(.post-type-archive):not(.tax-pro
 
 .entry-content {
 	p {
+		@extend .entry-content__p-product;
 		line-height: 1.75;
 		font-family: $font__main;
 	}
